--- a/values.yaml
+++ b/values.yaml
@@ -11,7 +11,7 @@ global:
   # imageK8S is the name (and tag) of the terraform-k8s Docker image that
   # is used for functionality such as workspace sync. This can be overridden
   # per component.
-  imageK8S: "glueops/terraform-k8s:0.1.0"
+  imageK8S: "glueops/terraform-k8s:v0.1.0"
 
   terraform_cloud_organization_name: ""
 
